--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -41,6 +41,7 @@ Secondary - 16px
   --border-color: #e7e9fc;
 
   --cta-background-color: #4d5ae5;
+  --border-color: #8e8f99;
 }
 html {
   box-sizing: border-box;
@@ -55,9 +56,18 @@ html {
 /* Hero section */
 
 .hero {
-  background-color: var(--secondary-background-color);
-  text-align: center;
+  max-width: 1440px;
+  height: 600px;
+  margin: auto;
   padding: 188px 0;
+  text-align: center;
+  background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/people-office.jpg");
+  background-color: var(--main-font-color);
 }
 .hero__title {
   margin: 0 auto 48px auto;
@@ -87,6 +97,14 @@ html {
 
 .features__item {
   flex-basis: calc((100% - 3 * 24px) / 4);
+}
+.feature__icon-box {
+  background-color: var(--ligth-background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  margin-bottom: 8px;
 }
 
 .domains {
@@ -126,4 +144,29 @@ html {
 }
 .team-member__picture {
   margin-bottom: 32px;
+}
+
+.team__member > .section__describtion {
+  margin-bottom: 8px;
+}
+.customers {
+  padding-top: 130px;
+}
+.customer-list {
+  display: flex;
+  column-gap: 24px;
+}
+.customer-item {
+  flex-basis: calc((100% - 5 * 24px) / 6);
+  border: 1px solid var(--border-color);
+  padding: 16px 0;
+  border-radius: 4px;
+  background-color: white;
+}
+.customer-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
