--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ html {
   --button-background-color: #404bbf;
   --button-light-blue-color: #e5e5e5;
   --border-color: #e7e9fc;
+  --green: #31d0aa;
 }
 
 /* Main style */
@@ -211,10 +212,11 @@ img {
   align-items: flex-start;
 }
 .footer__social-title {
+  margin-top: 0;
+  margin-bottom: 16px;
   color: var(--light-font-color);
   line-height: 1.5;
   letter-spacing: 0.2;
-  margin-top: 0;
 }
 
 .footer__social-links {
@@ -239,25 +241,34 @@ img {
   display: flex;
   justify-content: center;
   column-gap: 24px;
-  margin-top: 20px;
 }
 .social-list--item {
-  /* flex-basis: calc((100% - 3 * 24px) / 4); */
-
-  background-color: #ffffff1a;
-  border-radius: 50%;
   width: 40px;
   height: 40px;
 }
 
 .social-list--link {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue-color);
+  border-radius: 50%;
 }
-.social-list--link {
+
+.social-list--link:is(:hover, :focus) {
+  background-color: var(--button-background-color);
+}
+
+.footer--social-link {
+  background-color: #ffffff10;
+}
+.footer--social-link:is(:hover, :focus) {
+  background-color: var(--green);
+}
+
+.social-list--icon {
   fill: var(--ligth-background-color);
 }
 
